--- a/dev/cf_operator/BUILD.bazel
+++ b/dev/cf_operator/BUILD.bazel
@@ -4,11 +4,34 @@ load("//rules/helm:def.bzl", helm_template = "template")
 load("//rules/kubectl:def.bzl", kubectl_apply_binary = "apply", kubectl_delete_binary = "delete")
 load("//:def.bzl", "project")
 
+pkg_tar(
+    name = "",
+    package_dir = "assets",
+    srcs = [
+        "@cf_deployment//:cf_deployment",
+    ],
+)
+
+helm_package(
+    name = "chart",
+    srcs = [
+        ":chart_files_static",
+    ],
+    tars = [
+        ":cf_deployment",
+        "//bosh/releases:pre_render_scripts",
+    ],
+    chart_name = "scf",
+    chart_version = "3.0.0",
+    app_version = "2.0",
+)
+
 helm_template(
     name = "rendered_template",
     values = glob(["**/*values.yaml"]),
-    install_name = "scf",
-    chart_package = "//deploy/helm/scf:chart",
+    install_name = "cf-operator",
+    namespace = "{STABLE_KUBECF_NAMESPACE}",
+    chart_package = "@cf_operator//file",
 )
 
 kubectl_apply_binary(
