Fix eirini-persi extension
Signed-off-by: Dimitris Karakasilis <DKarakasilis@suse.com>

--- a/deploy/helm/kubecf/assets/operations/instance_groups/api.yaml
+++ b/deploy/helm/kubecf/assets/operations/instance_groups/api.yaml
@@ -50,6 +50,11 @@
   path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/cc/run_prestart_migrations?
   value: false
 
+# Enable volume services
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/cc/volume_services_enabled?
+  value: true
+
 # Add empty BPM processes to buildpacks.
 - type: replace
   path: /instance_groups/name=api/jobs/name=binary-buildpack/properties?/quarks/bpm/processes
