Testing: Trigger publish step on `test/` branches. Like this one itself.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,8 +55,7 @@ tests:
 
 publish:chart:
   stage: publish
-  only:
-  - master
+  only: *common_refs
   image:
     name: minio/mc
     entrypoint: [""]
