Disable test step for this test branch, testing publish, not tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,8 @@ build:chart:
 
 tests:
   stage: test
-  only: *common_refs
+  only:
+  - master
   script:
   - /usr/bin/date
   - .gitlab/pipelines/stages/deploy/setup_k8s.sh
