Add Helm templates to enable KubeCF with native Eirini
"Native" Eirini here means the standalone Helm Chart
that the official Eirini team provides to deploy
Eirini along a CF on Kubernetes.

Signed-off-by: Julian Skupnjak <skupnjak@de.ibm.com>

--- a/deploy/helm/kubecf/assets/operations/releases.yaml
+++ b/deploy/helm/kubecf/assets/operations/releases.yaml
@@ -76,7 +76,7 @@
     name: postgres
 {{- end }}
 
-{{- if .Values.features.eirini.enabled }}
+{{- if and .Values.features.eirini.enabled (not .Values.features.eirini.use_helm_release) }}
 {{- $releases = append $releases "bits-service" }}
 {{- $releases = append $releases "eirini" }}
 - type: replace
