--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,7 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@external_binaries//:def.bzl", "binary_location")
-load("@workspace_status//:def.bzl", "workspace_status")
+load("@workspace//:def.bzl", "workspace_status")
+load("//rules/kubecf:def.bzl", "image_cache_generator")
 load(":def.bzl", "project")
 
 workspace_status(
@@ -12,3 +13,9 @@ workspace_status(
     name = "{name}_binary_location".format(name = name),
     binary = "@{}//:binary".format(name),
 ) for name in project.external_binaries]
+
+image_cache_generator(
+    name = "image_cache_generator",
+    image_list = "//deploy/helm/kubecf:image_list",
+    output = "image_repositories.bzl",
+)
