--- a/rules/kubecf/BUILD.bazel
+++ b/rules/kubecf/BUILD.bazel
@@ -1,5 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
 exports_files([
+    "image_cache_generator.tmpl.rb",
     "image_list.tmpl.rb",
 ])
