Add code to the upgrade-test and unclaim the clusterIwhen done
Signed-off-by: Dimitris Karakasilis <DKarakasilis@suse.com>

--- a/.concourse/tasks/upgrade.yaml
+++ b/.concourse/tasks/upgrade.yaml
@@ -9,5 +9,6 @@ inputs:
 - name: kind-environments
 - name: catapult
 - name: s3.kubecf-ci
+- name: kubecf-github-release
 run:
   path: commit-to-test/.concourse/tasks/upgrade.sh
