Don't consume bits service from bosh release when helm chart is used

--- a/deploy/helm/kubecf/templates/ops.yaml
+++ b/deploy/helm/kubecf/templates/ops.yaml
@@ -28,7 +28,7 @@ data:
 {{ include "kubecf.ops" (dict "Root" $root "Path" "assets/operations/buildpacks/set_suse_buildpacks.yaml") }}
 {{- end }}
 
-{{- if .Values.features.eirini.enabled }}
+{{- if and .Values.features.eirini.enabled (not .Values.features.eirini.use_helm_release) }}
 {{ include "kubecf.ops" (dict "Root" $root "Path" "assets/use-bits-service.yml") }}
 {{- end }}
 
